Findbar repaired
Repairs findbar hidden behind status bar.

--- a/Firefox 106/userChrome.css
+++ b/Firefox 106/userChrome.css
@@ -62,6 +62,11 @@ html[inFullscreen="true"] #statuspanel[type="defaultStatus"] {
 }
 
 
+findbar{
+	margin-top: 20px !important;
+}
+
+
 /* U can ommit part below if won't change colors in some areas */
 /* new, better tabs visibility and theming pinned tabs */
 .tabbrowser-tab:not([selected]) .tab-background{
